# Kura

./: .env.example  .gitignore  DESKTOP.md  README.en.md  README.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
.claude/: launch.json
.github/workflows/: ci.yml  desktop-build.yml
app/: globals.css  layout.tsx  page.tsx
app/calendar/: actions.ts  page.tsx
app/collections/: actions.ts  page.tsx
app/login/: LoginForm.tsx  actions.ts  page.tsx
app/organize/: page.tsx
app/review/: actions.ts  error.tsx  page.tsx
app/search/: page.tsx
app/settings/: actions.ts  page.tsx
app/templates/: actions.ts  page.tsx
app/upload/: page.tsx
components/: AiSettingsForm.tsx  DocumentCard.tsx  DraftGenerator.tsx  Logo.tsx  Nav.tsx  PageShell.tsx  ProcessConsole.tsx  ReminderBanner.tsx  ReviewForm.tsx  SearchBox.tsx  SetupNotice.tsx  UploadDropzone.tsx
components/desktop/: FolderWatchSettings.tsx
components/ui/: Button.tsx  EmptyState.tsx  Field.tsx  Input.tsx  Select.tsx  Textarea.tsx  ToastProvider.tsx  cx.ts  icons.tsx  index.ts
components/workspace/: OrganizePanel.tsx
lib/: auth.ts  concurrency.ts  crypto.test.ts  crypto.ts  env.ts  gemini.ts  hash.ts  ndjson.ts  paths.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md
src-tauri/permissions/autogenerated/: start_watch.toml  stop_watch.toml
src-tauri/scripts/: bundle-server.mjs  fetch-node-sidecar.mjs
src-tauri/src/: lib.rs  main.rs
(+50 files in other folders)
