[package]
name = "kura"
version = "1.1.1"
description = "Kura 書類整理AI (desktop shell)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "kura_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
notify = "6"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
